yaml_files/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: petclinic-ser 
  namespace: petclinic-ns
spec:
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
