yaml_files/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic-ns
spec:
